...
            "state": "translated",
            "value": "Aggiungo…"
          }
        }
      }
    },
    "Almeno": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "At least"
          }
...
            "state": "translated",
            "value": "Aule"
          }
        }
      }
    },
    "Aule libere": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Free rooms"
          }
...
            "state": "translated",
            "value": "Cache"
          }
        }
      }
    },
    "Calendario": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Calendar"
          }
...
            "state": "translated",
            "value": "Se prendo"
          }
        }
      }
    },
    "Sede": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Campus"
          }
...
            "state": "translated",
            "value": "Servizi non autorizzati"
          }
        }
      }
    },
    "Settimana precedente": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Previous week"
          }
...
            "state": "translated",
            "value": "Settimana precedente"
          }
        }
      }
    },
    "Settimana successiva": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Next week"
          }
...
